tests/errors/compiler/no_comma_in_init_list/struct_init.c
void main()
{
	struct str { int a; int b; } st = { 1 2 };
}
